# MyTools

./: .gitignore  CMakeLists.txt
FileSync/: CMakeLists.txt  FileSync.cpp
